--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="display-1 text-center m-0 text-white p-0 w-100" style="background-image: url('img/tvkids-01.jpg');background-size:cover;background-position:center center;">Jacob Breck</h1>
+          <h1 class="display-1 text-center m-0 p-0 w-100 text-primary bg-danger" style="background-image: url('patterns/aaaaa.png');background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
         </div>
       </div>
     </div>
@@ -400,35 +400,34 @@
             <div class="tab-pane fade" role="tabpanel" id="pattern">
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/aaaaa.png');background-repeat:repeat;background-size:fit;">
-                  <h3 class="display-1 text-center m-5 p-5" contenteditable="true">AAAAAAAA!!!</h3>
+                  <h1 contenteditable="true" class="text-center m-5 p-5">AAAAAAAA!!!</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/Untitled-1.png');background-repeat:repeat;background-size:fit;">
-                  <h3 class="display-1 text-center m-5 p-5" contenteditable="true">(boom)</h3>
+                  <h1 contenteditable="true" class="text-center m-5 p-5">(boom)</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_ocean-waves.png');background-repeat:repeat;background-size:fit;">
-                  <h3 class="display-1 text-center m-5 p-5" contenteditable="true">Ocean Waves</h3>
+                  <h1 contenteditable="true" class="text-center m-5 p-5">Ocean Waves</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_stormy-sea.png');background-repeat:repeat;background-size:fit;">
-                  <h3 class="display-1 text-center m-5 p-5" contenteditable="true">Stormy Sea</h3>
+                  <h1 contenteditable="true" class="m-5 p-5 text-center text-white">Stormy Sea</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_dirt.png');background-repeat:repeat;background-size:fit;">
-                  <h3 class="display-1 text-center m-5 p-5" contenteditable="true">Dirt</h3>
+                  <h1 contenteditable="true" class="m-5 p-5 text-center text-white">Dirt</h1>
                 </div>
               </div>
             </div>
             <div class="tab-pane fade" role="tabpanel" id="about">
               <div class="row">
                 <div class="col-md-12 m-2 p-3">
-                  <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png">
-                </div>
+                  <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
               </div>
               <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola and their two cats. You can reach him via email at JacobBBreck@gmail.com. </p>
             </div>
