--- a/index.html
+++ b/index.html
@@ -400,27 +400,27 @@
             <div class="tab-pane fade" role="tabpanel" id="pattern">
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/aaaaa.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center m-5 p-5">AAAAAAAA!!!</h1>
+                  <h1 contenteditable="true" class="text-center m-5 p-0">AAAAAAAA!!!</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/Untitled-1.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center m-5 p-5">(boom)</h1>
+                  <h1 contenteditable="true" class="text-center m-5 p-0">(boom)</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_ocean-waves.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center m-5 p-5">Ocean Waves</h1>
+                  <h1 contenteditable="true" class="text-center m-5 p-0">Ocean Waves</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_stormy-sea.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="m-5 p-5 text-center text-white">Stormy Sea</h1>
+                  <h1 contenteditable="true" class="m-5 text-center text-white p-0">Stormy Sea</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_dirt.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="m-5 p-5 text-center text-white">Dirt</h1>
+                  <h1 contenteditable="true" class="m-5 text-center text-white p-0">Dirt</h1>
                 </div>
               </div>
             </div>
