--- a/index.html
+++ b/index.html
@@ -400,27 +400,27 @@
             <div class="tab-pane fade" role="tabpanel" id="pattern">
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/aaaaa.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center m-5 p-0">AAAAAAAA!!!</h1>
+                  <h1 contenteditable="true" class="text-center p-0 m-3">AAAAAAAA!!!</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/Untitled-1.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center m-5 p-0">(boom)</h1>
+                  <h1 contenteditable="true" class="text-center p-0 m-3">(boom)</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_ocean-waves.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center m-5 p-0">Ocean Waves</h1>
+                  <h1 contenteditable="true" class="text-center p-0 m-3">Ocean Waves</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_stormy-sea.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="m-5 text-center text-white p-0">Stormy Sea</h1>
+                  <h1 contenteditable="true" class="text-center text-white p-0 m-3">Stormy Sea</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_dirt.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="m-5 text-center text-white p-0">Dirt</h1>
+                  <h1 contenteditable="true" class="text-center text-white p-0 m-3">Dirt</h1>
                 </div>
               </div>
             </div>
@@ -431,19 +431,6 @@
               </div>
               <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola and their two cats. You can reach him via email at JacobBBreck@gmail.com. </p>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="btn-group">
-            <a href="#" class="btn btn-outline-primary">Btn 1</a>
-            <a href="#" class="btn btn-outline-primary">Btn 2</a>
-            <a href="#" class="btn btn-outline-primary">Btn 3</a>
           </div>
         </div>
       </div>
