--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
                   <div class="carousel-item active col-xs-12">
                     <img class="d-block img-fluid w-100 mx-auto" src="img/jbreck_harry.png"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="d-block img-fluid w-100 mx-auto" src="img/jbreck-icscans_0014.jpg"> </div>
-                  <div class="carousel-item col-xs-12">
                     <img class="img-fluid mx-auto" src="img/jbreck_artist-01.png"> </div>
                   <div class="carousel-item col-xs-12">
                     <img class="img-fluid mx-auto" src="img/antz.jpg" width="100%"> </div>
@@ -60,6 +58,9 @@
                     <img class="img-fluid" src="img/tvkids-01.jpg"> </div>
                   <div class="carousel-item col-xs-12">
                     <img class="img-fluid mx-auto" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="img/jbreck_shining-overlap.png">
+                  </div>
                   <div class="carousel-item col-xs-12 w-100">
                     <img class="img-fluid" src="img/inktober_02.jpg" width="100%"> </div>
                   <div class="carousel-item col-xs-12">
@@ -363,16 +364,48 @@
                   <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0016.jpg"> </div>
               </div>
               <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0014.jpg"> </div>
+              </div>
+              <div class="row">
                 <div class="col-md-6">
                   <img class="img-fluid d-block" src="sketches/inktober_04.jpg"> </div>
                 <div class="col-md-6">
                   <img class="img-fluid d-block py-5" src="sketches/pd-sketches_012.jpg"> </div>
               </div>
               <div class="row">
+                <div class="col-md-5">
+                  <img class="img-fluid d-block p-0" src="sketches/jbreck-icscans_0005 copy 2.jpg"> </div>
+                <div class="col-md-7">
+                  <img class="img-fluid d-block m-0" src="sketches/jbreck-icscans_0005 copy.jpg">
+                  <img class="img-fluid d-block m-0" src="sketches/jbreck-icscans_0005 copy 3.jpg"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0018 copy.jpg"> </div>
+              </div>
+              <div class="row">
                 <div class="col-md-7">
                   <img class="img-fluid d-block mx-auto py-4" src="sketches/portrait_0002.jpg"> </div>
                 <div class="col-md-5">
                   <img class="img-fluid d-block" src="sketches/portrait_0001.jpg"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <img class="img-fluid d-block mx-auto py-4" src="sketches/jbreck-icscans_0012 copy 2.jpg"> </div>
+                <div class="col-md-6">
+                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0007 copy.jpg"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0002 copy.jpg">
+                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0013.jpg"> </div>
+                <div class="col-md-6">
+                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0018 copy 2.jpg"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0012 copy.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
