--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="display-1 text-center m-0 p-0 w-100 text-primary bg-danger" style="background-image: url('patterns/aaaaa.png');background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
+          <h1 class="display-1 text-center m-0 w-100 text-primary bg-danger p-2" style="background-image: url('patterns/aaaaa.png');background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
         </div>
       </div>
     </div>
@@ -48,7 +48,10 @@
             <div class="tab-pane fade" id="illustration" role="tabpanel">
               <div class="carousel slide h-100 w-100" data-ride="carousel" id="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active col-xs-12">
+                  <div class="carousel-item active">
+                    <img class="img-fluid" src="img/self-portrait07192015.png">
+                  </div>
+                  <div class="carousel-item col-xs-12">
                     <img class="d-block img-fluid w-100 mx-auto" src="img/jbreck_harry.png"> </div>
                   <div class="carousel-item col-xs-12">
                     <img class="img-fluid mx-auto" src="img/jbreck_artist-01.png"> </div>
@@ -59,8 +62,7 @@
                   <div class="carousel-item col-xs-12">
                     <img class="img-fluid mx-auto" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
                   <div class="carousel-item">
-                    <img class="img-fluid" src="img/jbreck_shining-overlap.png">
-                  </div>
+                    <img class="img-fluid" src="img/jbreck_shining-overlap.png" width="100%"> </div>
                   <div class="carousel-item col-xs-12 w-100">
                     <img class="img-fluid" src="img/inktober_02.jpg" width="100%"> </div>
                   <div class="carousel-item col-xs-12">
@@ -79,6 +81,34 @@
               </div>
             </div>
             <div class="tab-pane fade show active" id="comics" role="tabpanel">
+              <div class="row my-5">
+                <div class="col-md-12 col-lg-12 container">
+                  <div class="row">
+                    <div class="col-md-3 col-xs-12 m-0 p-1">
+                      <img class="img-fluid d-block m-0 p-0 mx-auto" src="germ&#10;s/0-0.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-1.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-2.&#10;png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-3.p&#10;ng"> </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="d-block m-0 mx-auto img-fluid p-1" src="germs/1-0.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-1.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/1-2.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-3.png"> </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12 col-xs-12 m-0 p-0">
+                      <img class="d-block m-0 mx-auto img-fluid p-0" src="ss/cover.png"> </div>
+                  </div>
+                </div>
+              </div>
               <div class="row my-5">
                 <div class="col-md-12 col-lg-5 container">
                   <div class="row">
@@ -379,6 +409,10 @@
                 <div class="col-md-7">
                   <img class="img-fluid d-block m-0" src="sketches/jbreck-icscans_0005 copy.jpg">
                   <img class="img-fluid d-block m-0" src="sketches/jbreck-icscans_0005 copy 3.jpg"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck_armshead.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
