--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="theme.css" type="text/css">
   <title>Jacob Breck - Comics, Illustration, Animation</title>
   <meta name="description" content="Comics, Illustration, Animation, Sketches, &amp; Pattern Design by Jacob Breck">
-  <meta name="keywords" content="jacob breck comics illustration animation dark surreal dream dreams surrealism gender dog ant ants portrait sketches sketch sketchbook intern internship capitalism capitalist capitalists pheonix desert pattern water ocean storm sea wave waves seas oceans"> </head>
+  <meta name="keywords" content="jacob breck comics illustration digital print comic funny ironic humor animation dark surreal dream dreams surrealism gender dog ant ants portrait sketches sketch sketchbook intern internship capitalism capitalist capitalists pheonix desert pattern water ocean storm sea wave waves seas oceans germ germs"> </head>
 
 <body>
   <div class="py-0">
@@ -49,26 +49,25 @@
               <div class="carousel slide h-100 w-100" data-ride="carousel" id="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="img-fluid" src="img/self-portrait07192015.png">
-                  </div>
+                    <img class="img-fluid" alt="self portrait digital illustration face beard long hair impressionism" src="img/self-portrait07192015.png"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="d-block img-fluid w-100 mx-auto" src="img/jbreck_harry.png"> </div>
+                    <img class="d-block img-fluid w-100 mx-auto" alt="old dog pet portrait illustration digital impressionism black lab labrador" src="img/jbreck_harry.png"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" src="img/jbreck_artist-01.png"> </div>
+                    <img class="img-fluid mx-auto" alt="im gonna be an artist funny ironic white male gentrifier hardedge illustration digital" src="img/jbreck_artist-01.png"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" src="img/antz.jpg" width="100%"> </div>
+                    <img class="img-fluid mx-auto" alt="ant ants anthill dark bug bugs illustration cardstock print" src="img/antz.jpg" width="100%"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="img-fluid" src="img/tvkids-01.jpg"> </div>
+                    <img class="img-fluid" alt="window laptop computer television dark sunrise living room light hardedge illustration pencil digital" src="img/tvkids-01.jpg"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
+                    <img class="img-fluid mx-auto" alt="fire bird firebird pheonix desert cactus cacti tumbleweed illustration digital" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
                   <div class="carousel-item">
-                    <img class="img-fluid" src="img/jbreck_shining-overlap.png" width="100%"> </div>
+                    <img class="img-fluid" alt="the shining movie stanley kubrick jack nicholson horror slasher thriller illustration poster digital impressionism" src="img/jbreck_shining-overlap.png" width="100%"> </div>
                   <div class="carousel-item col-xs-12 w-100">
-                    <img class="img-fluid" src="img/inktober_02.jpg" width="100%"> </div>
+                    <img class="img-fluid" alt="germ germs pen ink illustration" src="img/inktober_02.jpg" width="100%"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" src="img/jbreck_sad.png" width="100%"> </div>
+                    <img class="img-fluid mx-auto" alt="sad staircase blue red hair child redhead sadness crying hardedge illustration digital" src="img/jbreck_sad.png" width="100%"> </div>
                   <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" src="img/jbreck_rip-01.png" width="100%"> </div>
+                    <img class="img-fluid mx-auto" alt="funny ironic death dead fire self portrait pencil digital illustration" src="img/jbreck_rip-01.png" width="100%"> </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -391,61 +390,61 @@
             <div class="tab-pane fade" id="sketchbook" role="tabpanel">
               <div class="row">
                 <div class="col-md-12">
-                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0016.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto" alt="ink pen color pencil sketch sketchbook trees tree forest planter plants plant abstraction abstract expressionism" src="sketches/jbreck-icscans_0016.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0014.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto" alt="pen ink void arm abyss darkness abstract abstraction" src="sketches/jbreck-icscans_0014.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img class="img-fluid d-block" src="sketches/inktober_04.jpg"> </div>
+                  <img class="img-fluid d-block" alt="skull skulls island plane grid waves ocean paper pen ink" src="sketches/inktober_04.jpg"> </div>
                 <div class="col-md-6">
-                  <img class="img-fluid d-block py-5" src="sketches/pd-sketches_012.jpg"> </div>
+                  <img class="img-fluid d-block py-5" alt="abstract abstraction dog god man waves ocean pen ink lined paper" src="sketches/pd-sketches_012.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-5">
-                  <img class="img-fluid d-block p-0" src="sketches/jbreck-icscans_0005 copy 2.jpg"> </div>
+                  <img class="img-fluid d-block p-0" alt="folk music musician acoustic guitar smile marker pen" src="sketches/jbreck-icscans_0005 copy 2.jpg"> </div>
                 <div class="col-md-7">
-                  <img class="img-fluid d-block m-0" src="sketches/jbreck-icscans_0005 copy.jpg">
-                  <img class="img-fluid d-block m-0" src="sketches/jbreck-icscans_0005 copy 3.jpg"> </div>
+                  <img class="img-fluid d-block m-0" alt="folk music musician acoustic guitar beard sitting marker pen" src="sketches/jbreck-icscans_0005 copy.jpg">
+                  <img class="img-fluid d-block m-0" alt="folk music musician acoustic guitar ukulele bald beard smile marker pen" src="sketches/jbreck-icscans_0005 copy 3.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck_armshead.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto" alt="arms head cryptid cryptids made up body horror pen ink inkwash" src="sketches/jbreck_armshead.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0018 copy.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto" alt="theater lighting search light water bottle an absolute mess color pencil ink" src="sketches/jbreck-icscans_0018 copy.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-7">
-                  <img class="img-fluid d-block mx-auto py-4" src="sketches/portrait_0002.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto py-4" alt="ballerina cat furry goth skull tshirt shirt socks violent violence pen ink" src="sketches/portrait_0002.jpg"> </div>
                 <div class="col-md-5">
-                  <img class="img-fluid d-block" src="sketches/portrait_0001.jpg"> </div>
+                  <img class="img-fluid d-block" alt="portrait black man earring sweater moustache goate pen ink" src="sketches/portrait_0001.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img class="img-fluid d-block mx-auto py-4" src="sketches/jbreck-icscans_0012 copy 2.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto py-4" alt="women queer lgbt pen ink" src="sketches/jbreck-icscans_0012 copy 2.jpg"> </div>
                 <div class="col-md-6">
-                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0007 copy.jpg"> </div>
+                  <img class="img-fluid d-block" alt="boy man pants king yertle turtle pen ink" src="sketches/jbreck-icscans_0007 copy.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0002 copy.jpg">
-                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0013.jpg"> </div>
+                  <img class="img-fluid d-block" alt="cityscape city rowhomes rowhouse skyline baltimore pen ink" src="sketches/jbreck-icscans_0002 copy.jpg">
+                  <img class="img-fluid d-block" alt="ghost receipt guest check kitchen thank you please come again heads body horror pen ink" src="sketches/jbreck-icscans_0013.jpg"> </div>
                 <div class="col-md-6">
-                  <img class="img-fluid d-block" src="sketches/jbreck-icscans_0018 copy 2.jpg"> </div>
+                  <img class="img-fluid d-block" alt="woman phone color pencil pen ink" src="sketches/jbreck-icscans_0018 copy 2.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <img class="img-fluid d-block mx-auto" src="sketches/jbreck-icscans_0012 copy.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto"  alt="abstract hills landscape strange pen ink" src="sketches/jbreck-icscans_0012 copy.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img class="img-fluid d-block my-5" src="sketches/pd-sketches 6.jpeg"> </div>
+                  <img class="img-fluid d-block my-5"  alt="cat misprint cardstock print" src="sketches/pd-sketches 6.jpeg"> </div>
                 <div class="col-md-6">
-                  <img class="img-fluid d-block" src="sketches/pd-sketches 5.jpeg"> </div>
+                  <img class="img-fluid d-block" alt="fish misprint cardstock print" src="sketches/pd-sketches 5.jpeg"> </div>
               </div>
             </div>
             <div class="tab-pane fade" id="animation" role="tabpanel">
