--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" data-toggle="pill" data-target="#about" href="">About</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" data-toggle="pill" data-target="illustrationtoo">Nav item</a>
+            </li>
           </ul>
           <div class="tab-content mt-2">
             <div class="tab-pane fade" id="illustration" role="tabpanel">
@@ -438,11 +441,11 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <img class="img-fluid d-block mx-auto"  alt="abstract hills landscape strange pen ink" src="sketches/jbreck-icscans_0012 copy.jpg"> </div>
+                  <img class="img-fluid d-block mx-auto" alt="abstract hills landscape strange pen ink" src="sketches/jbreck-icscans_0012 copy.jpg"> </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img class="img-fluid d-block my-5"  alt="cat misprint cardstock print" src="sketches/pd-sketches 6.jpeg"> </div>
+                  <img class="img-fluid d-block my-5" alt="cat misprint cardstock print" src="sketches/pd-sketches 6.jpeg"> </div>
                 <div class="col-md-6">
                   <img class="img-fluid d-block" alt="fish misprint cardstock print" src="sketches/pd-sketches 5.jpeg"> </div>
               </div>
@@ -495,7 +498,87 @@
                 <div class="col-md-12 m-2 p-3">
                   <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
               </div>
-              <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola and their two cats. You can reach him via email at JacobBBreck@gmail.com. </p>
+              <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. You can reach him via email at JacobBBreck@gmail.com. </p>
+            </div>
+            <div class="tab-pane fade" role="tabpanel" id="illustrationtoo">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card" id="tvkid">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                    <img class="card-img" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" alt="Card image">
+                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                      <h2 class="text-primary">Card title</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -505,7 +588,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:180px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo&nbsp;&nbsp;
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
     <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
   </pingendo>
 </body>
