--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="display-1 text-center m-0 w-100 text-primary bg-danger p-2" style="background-image: url('patterns/aaaaa.png');background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
+          <h1 class="display-1 text-center m-0 w-100 text-primary bg-danger p-0" style="background-image: url('patterns/aaaaa.png');background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
                   <div class="carousel-item col-xs-12">
                     <img class="img-fluid mx-auto" alt="fire bird firebird pheonix desert cactus cacti tumbleweed illustration digital" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
                   <div class="carousel-item">
-                    <img class="img-fluid" alt="the shining movie stanley kubrick jack nicholson horror slasher thriller illustration poster digital impressionism" src="img/jbreck_shining-overlap.png" width="100%"> </div>
+                    <img class="img-fluid" alt="the shining movie stanley kubrick jack nicholson horror slasher thriller illustration poster digital impressionism" src="img/jbreck_shining-overlap.jpg" width="100%"> </div>
                   <div class="carousel-item col-xs-12 w-100">
                     <img class="img-fluid" alt="germ germs pen ink illustration" src="img/inktober_02.jpg" width="100%"> </div>
                   <div class="carousel-item col-xs-12">
