--- a/index.html
+++ b/index.html
@@ -26,87 +26,35 @@
         <div class="col-md-12">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link active" href="" data-toggle="pill" data-target="#comics">Comics</a>
+              <a class="nav-link active" href="" data-toggle="pill" data-target="#germs">Germs</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link" data-target="#illustration" data-toggle="pill">Illustration</a>
+              <a class="nav-link" href="" data-toggle="pill" data-target="#ss">Sandbag Spectator</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link" data-toggle="pill" data-target="#sketchbook">Sketchbook</a>
+              <a class="nav-link" href="" data-toggle="pill" data-target="#sketchbook">Sketchbook</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="" data-toggle="pill" data-target="#illustration">Illustration</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link" data-target="#animation" data-toggle="pill">Animation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-target="#pattern" data-toggle="pill" href="">Pattern</a>
+              <a href="https://www.instagram.com/jacobbreck" class="nav-link">Instagram</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-toggle="pill" data-target="#about" href="">About</a>
+              <a class="nav-link" href="https://www.twitter.com/jacobbreck">Twitter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="" data-target="#about" data-toggle="pill">About</a>
             </li>
           </ul>
           <div class="tab-content mt-2">
-            <div class="tab-pane fade" id="illustration" role="tabpanel">
-              <div class="carousel slide h-100 w-100" data-ride="carousel" id="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="img-fluid" alt="self portrait digital illustration face beard long hair impressionism" src="img/self-portrait07192015.png"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="d-block img-fluid w-100 mx-auto" alt="old dog pet portrait illustration digital impressionism black lab labrador" src="img/jbreck_harry.png"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" alt="im gonna be an artist funny ironic white male gentrifier hardedge illustration digital" src="img/jbreck_artist-01.png"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" alt="ant ants anthill dark bug bugs illustration cardstock print" src="img/antz.jpg" width="100%"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="img-fluid" alt="window laptop computer television dark sunrise living room light hardedge illustration pencil digital" src="img/tvkids-01.jpg"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" alt="fire bird firebird pheonix desert cactus cacti tumbleweed illustration digital" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
-                  <div class="carousel-item">
-                    <img class="img-fluid" alt="the shining movie stanley kubrick jack nicholson horror slasher thriller illustration poster digital impressionism" src="img/jbreck_shining-overlap.jpg" width="100%"> </div>
-                  <div class="carousel-item col-xs-12 w-100">
-                    <img class="img-fluid" alt="germ germs pen ink illustration" src="img/inktober_02.jpg" width="100%"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" alt="sad staircase blue red hair child redhead sadness crying hardedge illustration digital" src="img/jbreck_sad.png" width="100%"> </div>
-                  <div class="carousel-item col-xs-12">
-                    <img class="img-fluid mx-auto" alt="funny ironic death dead fire self portrait pencil digital illustration" src="img/jbreck_rip-01.png" width="100%"> </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
-            <div class="tab-pane fade show active" id="comics" role="tabpanel">
-              <div class="row my-5">
-                <div class="col-md-12 col-lg-12 container">
-                  <div class="row">
-                    <div class="col-md-3 col-xs-12 m-0 p-1">
-                      <img class="img-fluid d-block m-0 p-0 mx-auto" src="germ&#10;s/0-0.png"> </div>
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-1.png"> </div>
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-2.&#10;png"> </div>
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-3.p&#10;ng"> </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="d-block m-0 mx-auto img-fluid p-1" src="germs/1-0.png"> </div>
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-1.png"> </div>
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/1-2.png"> </div>
-                    <div class="col-md-3 col-xs-12 m-0 p-0">
-                      <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-3.png"> </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12 col-xs-12 m-0 p-0">
-                      <img class="d-block m-0 mx-auto img-fluid p-0" src="ss/cover.png"> </div>
-                  </div>
-                </div>
+            <div class="tab-pane fade" id="ss" role="tabpanel">
+              <div class="row">
+                <div class="col-md-12 col-xs-12 m-0 p-0">
+                  <img class="d-block m-0 mx-auto img-fluid p-0" src="ss/cover.png"> </div>
               </div>
               <div class="row my-5">
                 <div class="col-md-12 col-lg-5 container">
@@ -387,6 +335,32 @@
                 </div>
               </div>
             </div>
+            <div class="tab-pane fade show active" id="germs" role="tabpanel">
+              <div class="row my-5">
+                <div class="col-md-12 col-lg-12 container">
+                  <div class="row">
+                    <div class="col-md-3 col-xs-12 m-0 p-1">
+                      <img class="img-fluid d-block m-0 p-0 mx-auto" src="germ&#10;s/0-0.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-1.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-2.&#10;png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/0-3.p&#10;ng"> </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="d-block m-0 mx-auto img-fluid p-1" src="germs/1-0.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-1.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/1-2.png"> </div>
+                    <div class="col-md-3 col-xs-12 m-0 p-0">
+                      <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-3.png"> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="tab-pane fade" id="sketchbook" role="tabpanel">
               <div class="row">
                 <div class="col-md-12">
@@ -430,6 +404,10 @@
                   <img class="img-fluid d-block" alt="boy man pants king yertle turtle pen ink" src="sketches/jbreck-icscans_0007 copy.jpg"> </div>
               </div>
               <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block mx-auto" alt="arms head cryptid cryptids made up body horror pen ink inkwash" src="sketches/inktober_02.jpg"> </div>
+              </div>
+              <div class="row">
                 <div class="col-md-6">
                   <img class="img-fluid d-block" alt="cityscape city rowhomes rowhouse skyline baltimore pen ink" src="sketches/jbreck-icscans_0002 copy.jpg">
                   <img class="img-fluid d-block" alt="ghost receipt guest check kitchen thank you please come again heads body horror pen ink" src="sketches/jbreck-icscans_0013.jpg"> </div>
@@ -441,73 +419,85 @@
                   <img class="img-fluid d-block mx-auto" alt="abstract hills landscape strange pen ink" src="sketches/jbreck-icscans_0012 copy.jpg"> </div>
               </div>
               <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block mx-auto" alt="arms head cryptid cryptids made up body horror pen ink inkwash" src="sketches/antz.jpg"> </div>
+              </div>
+              <div class="row">
                 <div class="col-md-6">
                   <img class="img-fluid d-block my-5" alt="cat misprint cardstock print" src="sketches/pd-sketches 6.jpeg"> </div>
                 <div class="col-md-6">
                   <img class="img-fluid d-block" alt="fish misprint cardstock print" src="sketches/pd-sketches 5.jpeg"> </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="animation" role="tabpanel">
+            <div class="tab-pane fade" id="illustration" role="tabpanel">
               <div class="row">
                 <div class="col-md-12">
-                  <iframe src="https://player.vimeo.com/video/107396145" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                  <p>
-                    <a href="https://vimeo.com/107396145">The Internship</a> from
-                    <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
-                    <a href="https://vimeo.com">Vimeo</a>.</p>
-                  <iframe src="https://player.vimeo.com/video/176201616" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                  <p>
-                    <a href="https://vimeo.com/176201616">Jacob Breck - Demo Reel 2016</a> from
-                    <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
-                    <a href="https://vimeo.com">Vimeo</a>.</p>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane fade" role="tabpanel" id="pattern">
-              <div class="row">
-                <div class="col-md-12 p-5" style="background-image: url('patterns/aaaaa.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center p-0 m-3">AAAAAAAA!!!</h1>
-                </div>
+                  <img class="img-fluid d-block" src="img/tvkids-01.jpg" width="100%"> </div>
               </div>
               <div class="row">
-                <div class="col-md-12 p-5" style="background-image: url('patterns/Untitled-1.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center p-0 m-3">(boom)</h1>
-                </div>
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/jbreck_artist-01.png" width="100%"> </div>
               </div>
               <div class="row">
-                <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_ocean-waves.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center p-0 m-3">Ocean Waves</h1>
-                </div>
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/jbreck_harry.png" width="100%"> </div>
               </div>
               <div class="row">
-                <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_stormy-sea.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center text-white p-0 m-3">Stormy Sea</h1>
-                </div>
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/jbreck_shining-overlap.jpg" width="100%"> </div>
               </div>
               <div class="row">
-                <div class="col-md-12 p-5" style="background-image: url('patterns/jbreck_dirt.png');background-repeat:repeat;background-size:fit;">
-                  <h1 contenteditable="true" class="text-center text-white p-0 m-3">Dirt</h1>
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/self-portrait07192015.png" width="100%"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/jbreck_sad.png" width="100%"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/jbreck_rip-01.png" width="100%"> </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <img class="img-fluid d-block" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
+              </div>
+              <div class="tab-pane fade" id="animation" role="tabpanel">
+                <div class="row">
+                  <div class="col-md-12">
+                    <iframe src="https://player.vimeo.com/video/107396145" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                    <p>
+                      <a href="https://vimeo.com/107396145">The Internship</a> from
+                      <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
+                      <a href="https://vimeo.com">Vimeo</a>.</p>
+                    <iframe src="https://player.vimeo.com/video/176201616" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                    <p>
+                      <a href="https://vimeo.com/176201616">Jacob Breck - Demo Reel 2016</a> from
+                      <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
+                      <a href="https://vimeo.com">Vimeo</a>.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="tab-pane fade" role="tabpanel" id="about">
-              <div class="row">
-                <div class="col-md-12 m-2 p-3">
-                  <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
+              <div class="tab-pane fade" role="tabpanel" id="about">
+                <div class="row">
+                  <div class="col-md-12 m-2 p-3">
+                    <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
+                </div>
+                <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. He likes to think he's funny or something. Interested in commissions/projects/telling him you like his art and stuff? You can reach him
+                  via email at JacobBBreck@gmail.com. </p>
               </div>
-              <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. You can reach him via email at JacobBBreck@gmail.com. </p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
+      <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
+    </pingendo>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-  </pingendo>
 </body>
 
 </html>
